Initial commit: create prototype stylesheets

--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,18 @@
 
     <!-- External CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" type="text/css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
+
+    <!-- Personalized Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:ital,wght@1,300;1,600&display=swap" rel="stylesheet">
 
     <!-- App CSS -->
-    <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/layout.css" type="text/css" />  
+    <link rel="stylesheet" href="/styles/nav.css" type="text/css" />  
+    <link rel="stylesheet" href="/styles/header.css" type="text/css"/>  
+    <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css"/>
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -20,10 +29,37 @@
   <body>
     <!-- Top nav bar (fixed) -->
     <nav>
-      <span>tweeter</span>
+      <span class="logo">tweeter</span>
+      <div class="newtweet-group">
+        <p class="newtweet"><strong>Write</strong> a new tweet</p>
+        <p class="arrow"><i class="fas fa-angle-double-down"></i></p>
+      </div>
     </nav>
+    <header class="header">
+      <div>
+          <img class="profile" src="/images/profile-hex.png"> 
+      </div>
+      <br>
+      <div>
+          <h2>Amy Mansell</h2>
+      </div>
+  </header>
 
     <!-- Page-specific (main) content here -->
-    <main class="container"></main>
+    <main class="container">
+      <section class="new-tweet">
+        <div id="error"></div>
+        <form id="new-tweet-form" method="POST" action="/tweets/">
+          <label for="tweet-text">What are you humming about?</label>
+          <textarea name="text" id="tweet-text"></textarea>
+          <div class="form-bottom">
+            <button class="nav" type="submit">Tweet</button>
+            <output name="counter" class="counter" for="tweet-text">140</output>
+          </div>
+        </form>
+      </section>
+    </main>
+    
+
   </body>
 </html>
