Add container element that contains the tweets

--- a/public/index.html
+++ b/public/index.html
@@ -59,6 +59,9 @@
           </div>
         </form>
       </section>
+      <section id="tweets-container">
+        <!-- tweets to be generated -->
+      </section>
     </main>
     
 
